--- a/pages/activities.html
+++ b/pages/activities.html
@@ -137,6 +137,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 30th International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2025.github.io/"><strong><u><font color="#874e26">DASFAA 2025</font></u></strong></a>), Singapore, May 25-28, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 31st International Conference on MultiMedia Modeling (<a href="https://mmm2025.net/"><strong><u><font color="#874e26">MMM 2025</font></u></strong></a>), Jara, Japan, January 7-10, 2025</li>
 
 
