--- a/pages/activities.html
+++ b/pages/activities.html
@@ -255,6 +255,10 @@
     <li><strong>Invited Reviewer</strong>, Information Sciences (<a href="https://www.sciencedirect.com/journal/information-sciences"><strong><u><font color="#874e26">IS</font></u></strong></a>)</li>
 
 
+<!-- 2024.12.01 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Information Fusion (<a href="https://www.sciencedirect.com/journal/information-fusion"><strong><u><font color="#874e26">IF</font></u></strong></a>)</li>
+
+
 <!-- 2024.07.24 收到的审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, Computers and Electronics in Agriculture (<a href="https://www.sciencedirect.com/journal/computers-and-electronics-in-agriculture"><strong><u><font color="#874e26">CEA</font></u></strong></a>)</li>
 
