--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -249,6 +249,8 @@
     |
     <a href="https://2025.ijcnn.org/" target="_blank">IJCNN</a>
     |
+    <a href="https://waset.org/artificial-neural-networks-conference-in-september-2025-in-hong-kong?utm_source=conferenceindex&utm_medium=referral&utm_campaign=listing" target="_blank">ICANN</a>
+    |
     <a href="https://pakdd2025.org/" target="_blank">PAKDD</a>
     |
     <a href="https://ecir2025.eu/" target="_blank">ECIR</a>
@@ -4099,13 +4101,78 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/FB43mG6xGbFgLDllXbgyJA" target="_blank">至高 1.8 倍无损加速！互补量化方案的投机加速</a>
     |
+    <!-- 2024.11.01 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.04 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
     <!-- 2024.11.05 -->
     <a href="https://" target="_blank">LeCun</a>
+    |
+    <!-- 2024.11.06 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.08 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.11 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.12 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
     |
     <!-- 2024.11.13 -->
     <a href="https://mp.weixin.qq.com/s/i0dTLDrEEznh4gn8cSsgEw" target="_blank">Ilya承认Scaling Law到头了，Meta和谷歌寻找替代o1的方法</a>
     |
     <a href="https://mp.weixin.qq.com/s/BRCh8TlzOM6UmLN5CZ2LTg" target="_blank">OpenAI总裁Greg终于归来！每周狂肝100小时代码</a>
+    |
+    <!-- 2024.11.15 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.18 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.19 -->
+    <a href="https://" target="_blank">Ilya</a>
+    |
+    <a href="https://" target="_blank">OpenAI</a>
+    |
+    <!-- 2024.11.20 -->
+    <a href="https://mp.weixin.qq.com/s/IWlVInwTzqbymVUNRhvP1Q" target="_blank">3名高中生中了AI顶会NeurIPS！来自人大附中、北师大实验中学、上海星河湾双语学校</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6MnXPxcNUCDZ54h9FFFSsQ" target="_blank">Mistral里程碑更新！上线Canvas、Artifact、联网，ChatGPT同款功能免费用</a>
+    |
+    <!-- 2024.11.21 -->
+    <a href="https://mp.weixin.qq.com/s/Xnb9wEnTxBrik48i4g6UCw" target="_blank">DeepSeek版o1与OpenAI的o1大PK，到底谁真的炸场了？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vr5DbRInXAk36nFE2RXpAA" target="_blank">量子计算又被AI突破了！谷歌AlphaQubit研究登上Nature，高精度纠正量子计算错误</a>
+    |
+    <!-- 2024.11.25 -->
+    <a href="hhttps://mp.weixin.qq.com/s/XqiRUeIT-U36J0Hl5398Ow" target="_blank">谷歌用LLM帮渐冻人用眼神打字，又快又省力！新研究登上Nature 子刊</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7dDX5yZSXdwzqhId59_hgw" target="_blank">和梁朝伟同获港科荣誉博士，黄仁勋与沈向洋对谈Scaling Law、后训练、机器人和爱情</a>
+    |
+    <!-- 2024.11.27 -->
+    <a href="https://mp.weixin.qq.com/s/YmOMxRR0HVqj1OBM3YzZ4w" target="_blank">Sora被泄漏！ 艺术家联盟上书，奥特曼怒拔网线！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XqiRUeIT-U36J0Hl5398Ow" target="_blank">谷歌用LLM帮渐冻人用眼神打字，又快又省力！新研究登上Nature 子刊</a>
     |
 
 </br>
