--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,6 +66,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC member</strong>, The 34th International Joint Conference on Artificial Intelligence (<a href="https://2025.ijcai.org/"><strong><u><font color="#874e26">IJCAI 2025</font></u></strong></a>), Montreal, Canada, August 16th-22th, 2025</li>
+
+
     <li><strong>PC member</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd-6th, 2024</li>
 
 
@@ -137,6 +140,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The International World Wide Web Conference (<a href="https://www2025.thewebconf.org/"><strong><u><font color="#874e26">WWW 2025</font></u></strong></a>), Australia, April 28-May 2, 2025</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 30th International Conference on Database Systems for Advanced Applications (<a href="https://dasfaa2025.github.io/"><strong><u><font color="#874e26">DASFAA 2025</font></u></strong></a>), Singapore, May 25-28, 2025</li>
 
 
