--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -617,6 +617,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/Fq-qk7268ErAe4_UrFPn2w" target="_blank">THUIR师生论文获CIKM 2024录用</a>
     |
+    <a href="https://mp.weixin.qq.com/s/2eV7BThvnRncaXgdYwsYxg" target="_blank">天津大学自然语言处理实验室6篇论文被COLING 2025接受！</a>
+    |
 <h4>2023</h4>
 <!-- network - A -->
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
