--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -366,6 +366,11 @@
     |
     <a href="" target="_blank">ChinaMM</a>
     |
+<!-- Geographic Information Systems -->
+    <a href="" target="_blank">ACM SIGSPATIAL</a>
+    |
+    <a href="https://asia.siggraph.org/2025/" target="_blank">SIGGRAPH Asia</a>
+    |
 <!-- software engineering - others -->
     <a href="" target="_blank">ChinaSoft</a>
     |
@@ -556,6 +561,8 @@
 <!-- Geographic Information Systems -->
     <a href="https://sigspatial2024.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
     |
+    <a href="https://asia.siggraph.org/2024/" target="_blank">SIGGRAPH Asia</a>
+    |
 <!-- software engineering - others -->
     <a href="https://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
@@ -618,6 +625,8 @@
     <a href="https://mp.weixin.qq.com/s/Fq-qk7268ErAe4_UrFPn2w" target="_blank">THUIR师生论文获CIKM 2024录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/2eV7BThvnRncaXgdYwsYxg" target="_blank">天津大学自然语言处理实验室6篇论文被COLING 2025接受！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/L5AMEjKCfnS6xVgfrzBSXQ" target="_blank">贾佳亚、徐立研究工作获 SIGGRAPH Asia 2024 时间检验奖 丨 AI 顶会直击</a>
     |
 <h4>2023</h4>
 <!-- network - A -->
