--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -385,7 +385,8 @@
     <br/>
 <!--     <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
     | -->
-
+    <a href="https://mp.weixin.qq.com/s/UcrJFsp3Ri132a4pEa8fDg" target="_blank">复旦大学数据智能与社会计算实验室3篇论文被COLING 2025录用</a>
+    | 
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
