--- a/pages/publications.html
+++ b/pages/publications.html
@@ -125,9 +125,6 @@
     <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Xiangwei Lai, <a href="http://"><strong><font color= "#00066f">AgrRE: Attention Guided and Multi-Scale Graph Convolutional Network for Relation Extraction from Chinese Agricultural-Aware Text</font></strong></a>. Arxiv
 
 
-    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://arxiv.org/pdf/2408.07911"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Improving Temporal Knowledge Graph Extrapolation Reasoning</font></strong></a>. Arxiv
-
-
     <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
     <li>Ming Liu*, Ran Liu, Ye Zhu, Hua Wang, Youyang Qu, Rongsheng Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and Wray Buntine, <a href="https://arxiv.org/pdf/2405.00704v2"><strong><font color= "#00066f">A Survey on the Real Power of ChatGPT</font></strong></a>. Arxiv
 </ol>
@@ -148,6 +145,9 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://cs.gzu.edu.cn/2021/1210/c17588a163794/page.htm" target="_blank">Yongbin Qin</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https://arxiv.org/pdf/2408.07911"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Improving Temporal Knowledge Graph Extrapolation Reasoning</font></strong></a>. Bridging Neurons and Symbols for Natural Language Processing and Knowledge Graphs Reasoning @ COLING 2025. Hangzhou (<a href="https://neusymbridge.github.io/"><strong><u><font color="#874e26">COLING NeusymBridge Workshop-25</font></u></strong></a>). Abu Dhabi, UAE from January 19th to 24th, 2025. (CCF-B Workshop)
+
+
     <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://link.springer.com/chapter/10.1007/978-981-97-9434-8_16"><strong><font color= "#00066f">TKGR-GPRSCL: Enhance Temporal Knowledge Graph Reasoning with Graph Structure-Aware Path Representation and Supervised Contrastive Learning</font></strong></a>. The 13th CCF International Conference on Natural Language Processing and Chinese Computing (NLPCC). Hangzhou (<a href="http://tcci.ccf.org.cn/conference/2024/"><strong><u><font color="#874e26">NLPCC-24</font></u></strong></a>). China, November 1-3, 2024. (CCF-C)
 </ol>
 
