--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -188,6 +188,31 @@
 
 <br />
 <h4>2026</h4>
+<!-- network - A -->
+    <a href="" target="_blank">IEEE INFOCOM</a>
+    |
+    <a href="" target="_blank">ICC</a>
+    |
+<!-- AI - A -->
+    <a href="" target="_blank">IJCAI</a>
+    |
+<!-- Hybrid - A -->
+    <a href="" target="_blank">The Web Conference</a>
+    |
+<!-- IR - A-->
+    <a href="" target="_blank">SIGIR</a>
+    |
+<!-- Knowledge engineering - A-->
+    <a href="" target="_blank">ACL</a>
+    |
+    <a href="" target="_blank">ICDCS</a>
+    |
+    <a href="" target="_blank">ICDE</a>
+    |
+    <a href="https://2026.sigmod.org/" target="_blank">ACM SIGMOD</a>
+    |
+    <a href="" target="_blank">VLDB</a>
+    |
 <br/>
 
 <h4>2025</h4>
@@ -212,7 +237,7 @@
     |
     <a href="https://ieee-icde.org/2025/" target="_blank">ICDE</a>
     |
-    <a href="" target="_blank">ACM SIGMOD</a>
+    <a href="https://2025.sigmod.org/index.shtml" target="_blank">ACM SIGMOD</a>
     |
     <a href="https://vldb.org/2025/" target="_blank">VLDB</a>
     |
