--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -412,6 +412,8 @@
     | -->
     <a href="https://mp.weixin.qq.com/s/UcrJFsp3Ri132a4pEa8fDg" target="_blank">复旦大学数据智能与社会计算实验室3篇论文被COLING 2025录用</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/MCApZ3uiHJknP4kS7NsnFw" target="_blank">哈工大SCIR 8篇长文被 COLING 2025录用</a>
+    | 
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
