--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.caai.cn/index.php?s=/home/article/detail/id/4024.html" target="_blank">中国人工智能学会推荐国际学术会议和国际/国内期刊目录</a>
   |
+  <a href="https://mp.weixin.qq.com/s/uqddWNzaOo2-j9X8PKm32g" target="_blank">8个专委自办学术会议入选CCF高质量国际学术会议培育计划</a>
+  |
   <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
   |
   <a href="https://mp.weixin.qq.com/s/6fBu6bt6Z7fgZDw-mhAM2w" target="_blank">CCF24场会议被中国科协《重要学术会议指南(2024)》收录</a>
