--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,6 +66,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
+    <li><strong>PC member</strong>, The International World Wide Web Conference (<a href="https://www2025.thewebconf.org/"><strong><u><font color="#874e26">WWW 2025</font></u></strong></a>), Australia, April 28-May 2, 2025</li>
+
+
     <li><strong>PC member</strong>, The 34th International Joint Conference on Artificial Intelligence (<a href="https://2025.ijcai.org/"><strong><u><font color="#874e26">IJCAI 2025</font></u></strong></a>), Montreal, Canada, August 16th-22th, 2025</li>
 
 
