--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -350,7 +350,7 @@
     |
     <a href="" target="_blank">EASE</a>
     |
-    <a href="" target="_blank">Internetware</a>
+    <a href="https://conf.researchr.org/home/internetware-2025" target="_blank">Internetware</a>
     |
     <a href="https://qrs25-temp.techconf.org/" target="_blank">QRS</a>
     |     
