--- a/pages/publications.html
+++ b/pages/publications.html
@@ -105,7 +105,7 @@
 
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Cong Jin, Yujie Song, Lizhu Xiong, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Plan-on-Knowledge Graph 1.0: Geographic Spatio-Temporal Resource Management and Schedule System with Knowledge Graph-Guided in Forest Fire-Resource Protection Scenarios</font></strong></a>. Arxiv-->
 
-    <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/pdf?id=llaUYfSTSR"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Open review
+    <li>Jingbao Luo, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, Ran Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://experts.deakin.edu.au/28663-gang-li" target="_blank">Gang Li</a>, Xin Hu, and <a href="" target="_blank">WupengNjust</a>, <a href="https://openreview.net/pdf?id=llaUYfSTSR"><strong><font color= "#00066f">Can Language Models Capture Human Writing Preferences on Text Summarization?</font></strong></a> Open review
 
 
     <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Enhancing Temporal Knowledge Graph Reasoning with Graph Structural Representation and Supervised Contrastive Learning</font></strong></a>. Arxiv
@@ -146,6 +146,15 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">A Agricultural-Aware Relation Extraction Model with Attention Guided and Graph Convolutional Network</font></strong></a>. BDDM
+
+
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Evaluating </font></strong></a>. BDDM
+
+
+    <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. BDDM
+
+
     <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://cs.gzu.edu.cn/2021/1210/c17588a163794/page.htm" target="_blank">Yongbin Qin</a>, <a href="https://experts.deakin.edu.au/46451-ming-liu" target="_blank">Ming Liu</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="https://arxiv.org/pdf/2408.07911"><strong><font color= "#00066f">CEGRL-TKGR: A Causal Enhanced Graph Representation Learning Framework for Temporal Knowledge Graph Reasoning</font></strong></a>. Bridging Neurons and Symbols for Natural Language Processing and Knowledge Graphs Reasoning @ COLING (<a href="https://neusymbridge.github.io/"><strong><u><font color="#874e26">COLING NeusymBridge Workshop-25</font></u></strong></a>). Abu Dhabi, UAE from January 19th to 24th, 2025. (CCF-B Workshop)
 
 
