--- a/pages/publications.html
+++ b/pages/publications.html
@@ -146,10 +146,10 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">A Agricultural-Aware Relation Extraction Model with Attention Guided and Graph Convolutional Network</font></strong></a>. BDDM
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">An Agricultural-Aware Relation Extraction Model with Attention Guided and Graph Convolutional Network</font></strong></a>. BDDM
 
 
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Evaluating </font></strong></a>. BDDM
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Model via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. BDDM
 
 
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. BDDM
