--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -354,7 +354,7 @@
     |
     <a href="https://qrs25-temp.techconf.org/" target="_blank">QRS</a>
     |     
-    <a href="" target="_blank">APSEC</a>
+    <a href="https://conf.researchr.org/home/apsec-2025" target="_blank">APSEC</a>
     |
     <a href="https://2025.msrconf.org/" target="_blank">MSR</a>
     |
@@ -413,6 +413,8 @@
     <a href="https://mp.weixin.qq.com/s/UcrJFsp3Ri132a4pEa8fDg" target="_blank">复旦大学数据智能与社会计算实验室3篇论文被COLING 2025录用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/MCApZ3uiHJknP4kS7NsnFw" target="_blank">哈工大SCIR 8篇长文被 COLING 2025录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/CB5MfS3-M_Eq5Holh27kAg" target="_blank">快讯｜北邮GAMMA LAB的四篇工作被AAAI 2025录用</a>
     | 
 <h4>2024</h4>
 <!-- network - A -->
@@ -5752,7 +5754,7 @@ NLP/KG Field：
     |
     <a href="https://cgraywang.github.io/" target="_blank">Chenguang Wang</a>
     |
-    <a href="https://ireneli.eu/" target="_blank">Irene Li</a>
+    <a href="https://www.li-lab.me/home" target="_blank">Irene Li</a>
     |
     <a href="https://chuxuzhang.github.io/" target="_blank">Chuxu Zhang</a>
     |
