--- a/pages/activities.html
+++ b/pages/activities.html
@@ -59,6 +59,25 @@
 <div class="container">
 
 <!-- <h3> Dissertation Thesis</h3> -->
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Publicity chair</h3>
+<ul>
+    <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
+</ul>
+
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Local chair</h3>
+<ul>
+    <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks-ijckg2024/"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, September 19th-22nd, 2024</li>
+</ul>
+
 
 <h3 style="
     color: #0084f2;
@@ -84,9 +103,6 @@
 
     <li><strong>PC member</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd-6th, 2024</li>
 
-
-    <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks-ijckg2024/"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, September 19th-22nd, 2024</li>
-
     
     <li><strong>PC member</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
 
@@ -98,9 +114,6 @@
 
     
     <li><strong>PC member</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org/"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
-
-
-    <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
 
 
     <li><strong>PC member</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
