--- a/pages/publications.html
+++ b/pages/publications.html
@@ -132,6 +132,14 @@
 
 <hr/>
 
+<!-- 2026 year -->
+<h4>2026</h4>
+<ol start="1">
+
+</ol>
+
+
+<hr/>
 
 <!-- 2025 year -->
 <h4>2025</h4>
@@ -145,10 +153,10 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">An Agricultural-Aware Relation Extraction Approach with Attention Guided and Graph Convolutional Network</font></strong></a>. Under review
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Relation Classification from Chinese Agricultural-Aware Text with Attention Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
-    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. Under review
+    <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. Under review
 
 
     <li>Yujie Song, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, Hui Zhang, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Evaluating Reasoning Capability of Large Language Models on Chinese Agricultural-Aware Textual Datasets: A Preliminary Study</font></strong></a>. Under review
