--- a/pages/activities.html
+++ b/pages/activities.html
@@ -83,6 +83,16 @@
     color: #0084f2;
     padding-left: 5px;
     margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Co-chair</h3>
+<ul>
+    <li><strong>Co-chair</strong>, The 2023 International Conference on Cyber-physical Social Intelligence (<a href="https://www.agist.org/iccsi2023/files/Accepted_Special_Sessions/S03.pdf"><strong><u><font color="#874e26">ICCSI 2023, Special Session: Big Data Techniques for Computer Vision</font></u></strong></a>), Xian, China, October 20th-23th, 2023</li>
+</ul>
+
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Area Chair</h3>
 <ul>
     <li><strong>Area Chair</strong>, The 2025 International Joint Conference on Neural Networks (<a href="https://2025.ijcnn.org/"><strong><u><font color="#874e26">IJCNN 2025</font></u></strong></a>), Rome, Italy, June 30-July 5, 2025</li>
