--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -295,7 +295,7 @@
     <a href="" target="_blank">ICWSM</a>
     |
 <!-- Service Computing - B-->
-    <a href="" target="_blank">ICWS</a>
+    <a href="https://services.conferences.computer.org/2025/" target="_blank">ICWS</a>
     |
     <a href="" target="_blank">ICSOC</a>
     |
