--- a/pages/publications.html
+++ b/pages/publications.html
@@ -107,7 +107,7 @@
 
 
 
-    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Enhancing Temporal Knowledge Graph Reasoning with Graph Structural Representation and Supervised Contrastive Learning</font></strong></a>. Arxiv
+    <li>Lizhu Xiong, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">Enhancing Temporal Knowledge Graph Reasoning with Graph Structural-Aware Context Representation and Supervised Contrastive Learning</font></strong></a>. Arxiv
 
 
     <li>Zhenhao Li, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zhichao Ma, and Fengyun Zhang, <a href="http://"><strong><font color= "#00066f">CodeSimGNet: Code Similarity Detection for Various Morphological Graph Structures using Graph Neural Networks</font></strong></a>. Arxiv 
