--- a/pages/activities.html
+++ b/pages/activities.html
@@ -176,6 +176,8 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, IEEE International Conference on Multimedia & Expo 2025 (<a href="https://2025.ijcnn.org/"><strong><u><font color="#874e26">ICME 2025</font></u></strong></a>), Nantes, France, June 30-July 4, 2025</li>
+
     <li><strong>Invited Reviewer</strong>, The 2025 International Joint Conference on Neural Networks (<a href="https://2025.ijcnn.org/"><strong><u><font color="#874e26">IJCNN 2025</font></u></strong></a>), Rome, Italy, June 30-July 5, 2025</li>
 
 
