--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -416,6 +416,8 @@
     | 
     <a href="https://mp.weixin.qq.com/s/CB5MfS3-M_Eq5Holh27kAg" target="_blank">快讯｜北邮GAMMA LAB的四篇工作被AAAI 2025录用</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/_aORLCuAgz0IsG8k9uTpVQ" target="_blank">哈工大SCIR 5篇论文被 AAAI 2025录用</a>
+    | 
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
