--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -332,7 +332,7 @@
 <!-- data mining - C-->  
     <a href="" target="_blank">ADMA</a>
     |
-    <a href="" target="_blank">APWeb-WAIM</a>
+    <a href="https://apweb2025.sau.edu.cn/" target="_blank">APWeb-WAIM</a>
     |
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
