--- a/pages/activities.html
+++ b/pages/activities.html
@@ -327,6 +327,10 @@
     <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
 
 
+<!-- 2024.12.28 收到的审稿邀请 -->    
+    <li><strong>Invited Reviewer</strong>, Data & Knowledge Engineering (<a href="https://www.sciencedirect.com/journal/data-and-knowledge-engineering"><strong><u><font color="#874e26">DKE Letters</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
 
 
