--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -242,7 +242,7 @@
     <a href="https://vldb.org/2025/" target="_blank">VLDB</a>
     |
 <!-- Multimedia - A-->
-    <a href="" target="_blank">ACM Multimedia</a>
+    <a href="https://acmmm2025.org/" target="_blank">ACM Multimedia</a>
     |
 <!-- software engineering - A-->
    <a href="https://conf.researchr.org/home/icse-2025" target="_blank">ICSE</a>
@@ -387,7 +387,7 @@
     <a href="https://www.icwsm.org/2024/" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
-    <a href="" target="_blank">ACM Multimedia Asia</a>
+    <a href="https://mmasia2025.org/" target="_blank">ACM Multimedia Asia</a>
     |
     <a href="" target="_blank">ChinaMM</a>
     |
@@ -829,8 +829,6 @@
     |
 <!-- Multimedia Learning -->
     <a href="http://mmasia2023.org/" target="_blank">ACM Multimedia Asia</a>
-    |
-    <a href="http://mmasia2023.org/index.html" target="_blank">ACM Multimedia Asia</a>
     |
 <!-- software engineering - others -->
     <a href="https://conf.ccf.org.cn/web/html7/HYDT2.html?channelId=8a9e362c84e695e50184e6eff1030000&globalId=m1049400089711349760167023807829" target="_blank">ChinaMM</a>
