--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -291,8 +291,11 @@
     |
     <a href="https://ecai2025.org/" target="_blank">ECAI</a>
     |
-<!-- social Computing - B-->
+<!-- social computing - B-->
     <a href="" target="_blank">ICWSM</a>
+    |
+<!-- uncertainty computing - B-->
+    <a href="https://www.auai.org/uai2025/" target="_blank">UAI</a>
     |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2025/" target="_blank">ICWS</a>
@@ -487,8 +490,11 @@
     |
     <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
     |
-<!-- social Computing - B-->
+<!-- social computing - B-->
     <a href="https://www.icwsm.org/2024/index.html/" target="_blank">ICWSM</a>
+    |
+<!-- uncertainty computing - B-->
+    <a href="https://www.auai.org/uai2024/" target="_blank">UAI</a>
     |
 <!-- Service Computing - B-->
     <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
@@ -659,6 +665,8 @@
     <a href="https://mp.weixin.qq.com/s/2eV7BThvnRncaXgdYwsYxg" target="_blank">天津大学自然语言处理实验室6篇论文被COLING 2025接受！</a>
     |
     <a href="https://mp.weixin.qq.com/s/L5AMEjKCfnS6xVgfrzBSXQ" target="_blank">贾佳亚、徐立研究工作获 SIGGRAPH Asia 2024 时间检验奖 丨 AI 顶会直击</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/1epw_EPRw8Pi_nlQ_47iMQ" target="_blank">东北大学iDC-NEU实验室2024年度论文总结</a>
     |
 <h4>2023</h4>
 <!-- network - A -->
