--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -241,6 +241,9 @@
     |
     <a href="https://vldb.org/2025/" target="_blank">VLDB</a>
     |
+<!-- DB - A-->
+    <a href="https://2026.sigmod.org/" target="_blank">ACM Sigmod</a>
+    |
 <!-- Multimedia - A-->
     <a href="https://acmmm2025.org/" target="_blank">ACM Multimedia</a>
     |
@@ -420,7 +423,9 @@
     <a href="https://mp.weixin.qq.com/s/CB5MfS3-M_Eq5Holh27kAg" target="_blank">快讯｜北邮GAMMA LAB的四篇工作被AAAI 2025录用</a>
     | 
     <a href="https://mp.weixin.qq.com/s/_aORLCuAgz0IsG8k9uTpVQ" target="_blank">哈工大SCIR 5篇论文被 AAAI 2025录用</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/FPWVvh5pEMiINML-ZFEq0w" target="_blank">【新闻】东北大学数据挖掘实验室1篇论文被COLING 2025录用</a>
+    |  
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
