--- a/pages/publications.html
+++ b/pages/publications.html
@@ -122,7 +122,7 @@
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Tangyunzhi Jiang, Yujie Song, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">CarCKGBuilder: A Novel Carbon-Assessed Crop Knowledge Graph Construction in Agricultural Domain for Carbon Effects Analytics</font></strong></a>. Arxiv
 
 
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Xiangwei Lai, <a href="http://"><strong><font color= "#00066f">AgrRE: Attention Guided and Multi-Scale Graph Convolutional Network for Relation Extraction from Chinese Agricultural-Aware Text</font></strong></a>. Arxiv
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Xiangwei Lai, <a href="http://"><strong><font color= "#00066f">Agri-RelEx: A Sentence-Level Relation Extraction Framework from Chinese Agricultural Text with Attention-Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Arxiv
 
 
     <!-- <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>.</li> -->
@@ -153,7 +153,7 @@
 <!-- 2024 year -->
 <h4>2024</h4>
 <ol start="1">
-    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Relation Classification from Chinese Agricultural-Aware Text with Attention Guided and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
+    <li>Tangyunzhi Jiang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Yiting Wang, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="" target="_blank">Pingping Zhou</a>, <a href="http://"><strong><font color= "#00066f">Relation Extraction from Chinese Agricultural-Aware Text with Attention-Grounded and Multi-Scale Graph Convolutional Network</font></strong></a>. Under review
 
 
     <li>Xianming Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://cis.swu.edu.cn/info/1014/1220.htm" target="_blank">Xiangwei Lai</a>, and <a href="http://cis.swu.edu.cn/info/1013/1160.htm" target="_blank">Tao Jia</a>, <a href="http://"><strong><font color= "#00066f">A Novel Suicide Risk Detection Method via Graph Context-Based Encoding and Adaptive Aggregation</font></strong></a>. Under review
