--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -330,13 +330,19 @@
 <!-- Acoustics, Speech and Signal Processing - B-->
     <a href="https://2025.ieeeicassp.org/" target="_blank">ICASSP</a>
     |
+<!-- Bioinformatics and Biomedicine - B-->
+    <a href="https://www.ieeebibm.org/BIBM2025/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
+<!-- Robotics - B-->
+    <a href="https://2025.ieee-icra.org/" target="_blank">ICRA</a>
+    |
 <!-- bigdata - C-->  
     <a href="" target="_blank">IEEE BigData</a>
     |
     <a href="" target="_blank">IEEE BigDataService</a>
     |
 <!-- data mining - C-->  
-    <a href="" target="_blank">ADMA</a>
+    <a href="https://adma2025.github.io/" target="_blank">ADMA</a>
     |
     <a href="https://apweb2025.sau.edu.cn/" target="_blank">APWeb-WAIM</a>
     |
@@ -373,6 +379,8 @@
     |
 <!-- information system - C-->
     <a href="" target="_blank">WISE</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pij6mFKKn72DaW7TGeetgA" target="_blank">WISA</a>
     |
 <!-- computer animation - C-->
     <a href="https://casa2025.sciencesconf.org/?lang=en" target="_blank">CASA</a>
