--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -390,7 +390,7 @@
     |
     <a href="http://cips-cl.org/static/CCL2025/cclEssay/notice/index.html" target="_blank">CCL</a>
     |
-    <a href="" target="_blank">CCKS</a>
+    <a href="https://sigkg.cn/ccks2025/" target="_blank">CCKS</a>
     |
     <a href="" target="_blank">CCIR</a>
     |
@@ -398,7 +398,7 @@
     |
     <a href="http://wasa-conference.org/WASA2025/" target="_blank">WASA</a>
     |
-    <a href="https://www.icwsm.org/2024/" target="_blank">ICWSM</a>
+    <a href="https://www.icwsm.org/2025/" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
     <a href="https://mmasia2025.org/" target="_blank">ACM Multimedia Asia</a>
@@ -409,6 +409,11 @@
     <a href="" target="_blank">ACM SIGSPATIAL</a>
     |
     <a href="https://asia.siggraph.org/2025/" target="_blank">SIGGRAPH Asia</a>
+    |
+<!-- NLP - others -->
+    <a href="https://www.illc.uva.nl/NewsandEvents/Events/Conferences/newsitem/15321/31-July---1-August-2025-29th-Conference-on-Computational-Natural-Language-Learning-CoNLL-2025-Vienna-Austria" target="_blank">CoNLL</a>
+    |
+    <a href="" target="_blank">INLG</a>
     |
 <!-- software engineering - others -->
     <a href="" target="_blank">ChinaSoft</a>
@@ -433,6 +438,8 @@
     <a href="https://mp.weixin.qq.com/s/_aORLCuAgz0IsG8k9uTpVQ" target="_blank">哈工大SCIR 5篇论文被 AAAI 2025录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/FPWVvh5pEMiINML-ZFEq0w" target="_blank">【新闻】东北大学数据挖掘实验室1篇论文被COLING 2025录用</a>
+    |  
+    <a href="https://ccs.imu.edu.cn/info/1053/2347.htm" target="_blank">学院6篇论文被自然语言处理领域国际会议COLING 2025录用</a>
     |  
 <h4>2024</h4>
 <!-- network - A -->
@@ -613,6 +620,9 @@
     <a href="https://sigspatial2024.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
     |
     <a href="https://asia.siggraph.org/2024/" target="_blank">SIGGRAPH Asia</a>
+    |
+<!-- NLP - others -->
+    <a href="https://2024.inlgmeeting.org/" target="_blank">INLG</a>
     |
 <!-- software engineering - others -->
     <a href="https://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
@@ -850,6 +860,9 @@
     |
 <!-- Multimedia Learning -->
     <a href="http://mmasia2023.org/" target="_blank">ACM Multimedia Asia</a>
+    |
+<!-- NLP - others -->
+    <a href="https://inlg2023.github.io/" target="_blank">INLG</a>
     |
 <!-- software engineering - others -->
     <a href="https://conf.ccf.org.cn/web/html7/HYDT2.html?channelId=8a9e362c84e695e50184e6eff1030000&globalId=m1049400089711349760167023807829" target="_blank">ChinaMM</a>
