--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -346,6 +346,12 @@
     |
     <a href="https://apweb2025.sau.edu.cn/" target="_blank">APWeb-WAIM</a>
     |
+<!-- NLP - C-->    
+    <a href="http://tcci.ccf.org.cn/conference/2025/" target="_blank">NLPCC</a>
+    |
+<!-- CV -->
+    <a href="http://www.mingroup.cn/index.asp" target="_blank">PRCV</a>
+    |
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
     |
