--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -255,7 +255,7 @@
 <!-- visualization - A-->
     <a href="" target="_blank">CHI</a>
     |
-    <a href="" target="_blank">IEEE Visualization Conference</a>
+    <a href="https://ieeevis.org/year/2025/welcome" target="_blank">IEEE Visualization Conference</a>
     |
 <!-- network - B -->
     <a href="" target="_blank">ICDCS</a>
@@ -337,7 +337,7 @@
     <a href="https://2025.ieee-icra.org/" target="_blank">ICRA</a>
     |
 <!-- bigdata - C-->  
-    <a href="" target="_blank">IEEE BigData</a>
+    <a href="https://bigdataieee.org/BigData2025/" target="_blank">IEEE BigData</a>
     |
     <a href="" target="_blank">IEEE BigDataService</a>
     |
