--- a/pages/activities.html
+++ b/pages/activities.html
@@ -291,6 +291,10 @@
     </li>
 
 
+<!-- 2025.01.20 收到审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, IEEE Transactions on Systems, Man and Cybernetics: Systems (<a href="https://ieeexplore.ieee.org/xpl/topics.jsp?punumber=6221021"><strong><u><font color="#874e26">IEEE TSMC-S</font></u></strong></a>)</li>
+
+
 <!-- 2024.10.17 收到Kaizhu Huang审稿邀请 -->
     <li><strong>Invited Reviewer</strong>, Neural Networks (<a href="https://www.sciencedirect.com/journal/neural-networks"><strong><u><font color="#874e26">NN</font></u></strong></a>)</li>
 
