--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -446,7 +446,13 @@
     <a href="https://mp.weixin.qq.com/s/FPWVvh5pEMiINML-ZFEq0w" target="_blank">【新闻】东北大学数据挖掘实验室1篇论文被COLING 2025录用</a>
     |  
     <a href="https://ccs.imu.edu.cn/info/1053/2347.htm" target="_blank">学院6篇论文被自然语言处理领域国际会议COLING 2025录用</a>
-    |  
+    |
+    <a href="https://" target="_blank">COLING 2025奖项公布：CIPS计算语言学专业委员会专委获最佳长论文奖和杰出论文奖</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/gZRpxcUH4lMUf4mou0K5TA" target="_blank">蚂蚁开源 2024 年论文总结</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jqFQH6ZYhZRrzilLAo9BiA" target="_blank">一文梳理业界落地LLM4Rec的若干范式-数万字超长文(建议收藏)</a>
+    |   
 <h4>2024</h4>
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
