--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@ Check out Sheng's up-to-date CV for more details.
 <h3>Recent News</h3>
 <ul>
     <li style="text-align:justify">
+      [2025/01/27]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/applsci/special_issues/SRWTPKFMP9" target="_blank">special issue (opens the new window)</a> on Open-Domain Information Mining: Theories and Applications in the Applied Sciences-Basel Journal. Welcome your submission.</font>
+    </li>
+    <li style="text-align:justify">
       [2023/12/29]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/6837W6XEIV" target="_blank">special issue (opens the new window)</a> on Entropy-Centric Intelligent Computation With Graph: In Pursuit of Advanced Computational Theories, Methods, and Applications in the Entropy Journal. Welcome your submission.</font>
     </li>
     <li style="text-align:justify">
